--- a/tienditaColegial/bower.json
+++ b/tienditaColegial/bower.json
@@ -9,6 +9,14 @@
     "angular": "1.5.x",
     "angular-mocks": "1.5.x",
     "angular-route": "1.5.x",
-    "bootstrap": "3.3.x"
+    "bootstrap": "3.3.x",
+    "angular-material": "^1.1.1",
+    "angular-animate": "^1.5.8",
+    "angular-aria": "^1.5.8",
+    "angular-ui-utils": "^3.0.0",
+    "angular-ui-router": "^0.3.1",
+    "angular-resource": "^1.5.8",
+    "hammerjs": "^2.0.8",
+    "angular-messages": "^1.5.8"
   }
 }
