--- a/tienditaColegial/bower.json
+++ b/tienditaColegial/bower.json
@@ -17,6 +17,7 @@
     "angular-ui-router": "^0.3.1",
     "angular-resource": "^1.5.8",
     "hammerjs": "^2.0.8",
-    "angular-messages": "^1.5.8"
+    "angular-messages": "^1.5.8",
+    "material-design-icons": "^3.0.1"
   }
 }
