--- a/tienditaColegial/bower.json
+++ b/tienditaColegial/bower.json
@@ -18,6 +18,7 @@
     "angular-resource": "^1.5.8",
     "hammerjs": "^2.0.8",
     "angular-messages": "^1.5.8",
-    "material-design-icons": "^3.0.1"
+    "material-design-icons": "^3.0.1",
+    "ngCart": "ngcart#^1.0.0"
   }
 }
