--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "angular-route": "^1.5.8",
+    "angularfire": "^2.1.0",
     "body-parser": "^1.15.2",
     "bower": "^1.8.0",
     "cookie-parser": "^1.4.3",
