--- a/tienditacolegial/bower.json
+++ b/tienditacolegial/bower.json
@@ -21,6 +21,7 @@
     "material-design-icons": "^3.0.1",
     "ngCart": "ngcart#^1.0.0",
     "angular-cookies": "^1.5.8",
-    "angularfire": "^2.1.0"
+    "angularfire": "^2.1.0",
+    "sweetalert2": "^6.2.1"
   }
 }
