--- a/tienditacolegial/package.json
+++ b/tienditacolegial/package.json
@@ -13,6 +13,7 @@
     "postinstall": "./node_modules/bower/bin/bower install"
   },
   "dependencies": {
+    "angular": "^1.6.0",
     "angular-route": "^1.5.8",
     "angularfire": "^2.1.0",
     "body-parser": "^1.15.2",
@@ -25,6 +26,7 @@
     "mysql": "^2.12.0",
     "nodemon": "^1.11.0",
     "pg": "^6.1.0",
-    "serve-favicon": "^2.3.0"
+    "serve-favicon": "^2.3.0",
+    "sweetalert2": "^6.2.1"
   }
 }
